--- a/config.toml
+++ b/config.toml
@@ -9,10 +9,10 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 [permalinks]
     post = "/:year/:month/:day/:slug/"
 
-#[[menu.main]]
-#    name = "About"
-#    url = "/about/"
-#    weight = 1
+[[menu.main]]
+    name = "About"
+    url = "/about/"
+    weight = 1
 [[menu.main]]
     name = "Twitter"
     url = "https://twitter.com/brshallo"
