--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     weight = 4
 [[menu.main]]
     name = "YouTube"
-    url = "https://www.youtube.com/channel/UCDVMC4-VRU-tR2Z4nYc1mDA"
+    url = "https://www.youtube.com/watch?v=gme4Fb9JVjk&list=PL2f6B79nBqL16QFte8fN_GWDtJwZDXt95"
     weight = 5
 
 [params]
