--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,15 @@
-baseurl = "/"
+baseurl = "https://www.bryanshalloway.com/"
 languageCode = "en-us"
 title = "Bryan Shalloway's Blog"
 theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = "bryanshalloway"
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
