--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Bryan Shalloway's Blog"
 theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = "bryanshalloway"
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\\.md$"]
 
 [markup]
   [markup.goldmark]
