--- a/config.toml
+++ b/config.toml
@@ -51,6 +51,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
 
     # path to the favicon, under "static"
     favicon = "favicon.ico"
+    
+    # Set to true to disable code folding
+    disable_codefolding = false
+    # Set to "hide" or "show" all codes by default
+    codefolding_show = "show"
+    # Set to true to exclude the "Show/hide all" button
+    codefolding_nobutton = false
+    custom_css = ["codefolding.css"]
 
     [params.logo]
     url = "bryan_edit.jpg"
