--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     weight = 1
 [[menu.main]]
     name = "Presentations"
-    url = "https://www.youtube.com/watch?v=gme4Fb9JVjk&list=PL2f6B79nBqL16QFte8fN_GWDtJwZDXt95"
+    url = "https://www.youtube.com/watch?v=c9oU7ALJS3o&list=PL2f6B79nBqL16QFte8fN_GWDtJwZDXt95&index=1"
     weight = 2
 [[menu.main]]
     name = "GitHub"
